# password_managing

./: README.md  data_window.py  functional.py  info.json  info.txt  info_window.py  main.py  pyproject.toml  receive_data_window.py
