[tool.poetry]
name = "password-managing"
version = "0.1.0"
description = ""
authors = ["ssssplassssh <igorrosolovskij2016@gmail.com>"]
readme = "README.md"
packages = [{include = "password_managing"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
